2003-09-19  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: Use gnome-2-4 branch of gcalctool.

2003-09-18  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome26.modules: Use the gtkmm and glibmm cvs
	modules for 2.4.

2003-09-18  Anders Carlsson  <andersca@gnome.org>

	* modulesets/gnome26.modules: Add gnome26 moduleset.

2003-09-17  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: Use gnome-2-4 branch of gnome-media.

2003-09-17  James Henstridge  <james@daa.com.au>

	* module.py (_isxterm): same here.

	* bootstrap.py (_isxterm): rxvt can do xterm title escapes.

2003-09-15  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: Really use gnome-2-4 branch of gedit (oops);
	Use gnome-2-4 branch of gnome-panel and gnome-applets.

2003-09-15  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: Use gnome-2-4 branch of gedit

2003-09-12  Alex Duggan  <aldug@astrolinux.com>

	* modulesets/gnome24.modules: Use gnome-2-4 branch of gnome-utils

2003-09-12  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: Use gnome-2-4 branch of gnome-vfs, librsvg,
	eel, and nautilus.

2003-09-11  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: Use gnome-2-4 branch of gnome-mime-data

2003-09-11  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* modulesets/gnome24.modules: Revert change by Bryan Forbes to make
	glimmer use HEAD instead of the dead new-gtksourceview branch.

2003-09-09  Calum Benson  <calum.benson@sun.com>

	* modulesets/gnome24.modules: Use gnome-2-4 branch of
	for gnome-themes

Mon Sep  8 16:35:26 2003  Jonathan Blandford  <jrb@redhat.com>

	* modulesets/gnome24.modules: Use gnome-2-4 branch

2003-09-07  James Henstridge  <james@daa.com.au>

	* module.py (read_module_set): allow user to override branch tag
	and autogen args for mozilla, like they can for other CVS modules.

2003-09-06  Anders Carlsson  <andersca@gnome.org>
