@@ -20,3 +20,5 @@ autogenargs='--enable-maintainer-mode --disable-static --disable-gtk-doc'
 installprog = os.path.join(os.environ['HOME'], 'bin', 'install-check')
 
 branches['libglade'] = 'libglade-gobject-support-branch'
+module_autogenargs['gimp'] = '--disable-print --enable-python'
+
