@@ -1,3 +1,15 @@
+2003-09-21  James Henstridge  <james@daa.com.au>
+
+	* changecvsroot.py (changecvsroot): short script that might be
+	helpful for some people.
+
+	* modulesets/gnome22.modules: similar changes here.
+
+	* modulesets/gnome24.modules: add some cvs roots.
+	(fontconfig): use fredesktop.org cvsroot.
+	(Render): same here.
+	(Xrender): same here.
+
 2003-09-19  Bryan Forbes  <mxpxfifws@yahoo.com>
 
 	* modulesets/gnome24.modules: Use gnome-2-4 branch of gcalctool.
